--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   animated_text_kit: ^4.2.2
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.0
-  cloud_firestore: ^4.5.0
+  cloud_firestore: ^4.5.1
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
